err/akilib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/akilib'...
Listing './lib/python3.5/site-packages/akilib/edison'...
Compiling './lib/python3.5/site-packages/akilib/edison/AKI_AQM1248A.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_AQM1248A.py", line 27
    print "Init"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_GPIO_SG12864ASLB.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (AKI_GPIO_SG12864ASLB.py, line 73)
Compiling './lib/python3.5/site-packages/akilib/edison/AKI_I2C_BM280.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_I2C_BM280.py", line 24
    print "W:0x%02X = 0x%02X" % (addr,data)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_I2C_HDC1000.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_I2C_HDC1000.py", line 15
    print "== HDC1000 Open =="
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_I2C_L3GD20.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_I2C_L3GD20.py", line 33
    print "Who am I?: 0x%02X" % self.i2cReg("r",0x0F)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_I2C_LIS3DH.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_I2C_LIS3DH.py", line 31
    print "Who am I?: 0x%02X" % self.i2cReg("r",0x0F)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_I2C_LPS25H.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_I2C_LPS25H.py", line 14
    print "AKI_I2C_LPS25H"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_I2C_MCP23017.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_I2C_MCP23017.py", line 19
    print "MCP23017 Open."
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_SG12864ASLB.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_SG12864ASLB.py", line 63
    print "Init"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/AKI_SPI_AQM1248A.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/AKI_SPI_AQM1248A.py", line 25
    print "Init"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/MCP23017.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/MCP23017.py", line 19
    print "MCP23017 Open."
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/edison/test.py'...
***   File "./lib/python3.5/site-packages/akilib/edison/test.py", line 11
    print "test init"
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/akilib/raspberrypi'...
Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_ACM1602N1.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_ACM1602N1.py", line 10
    print "AKI_I2C_ACM1602N1"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_ADT7410.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_ADT7410.py", line 8
    print "AKI_I2C_ADT7410"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_AQM0802A.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_AQM0802A.py", line 13
    print "AKI_I2C_AQM0802A"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_AQM1602A.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_AQM1602A.py", line 10
    print "AKI_I2C_AQM1602A"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_HDC1000.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_HDC1000.py", line 11
    print "== HDC1000 Open =="
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_LPS25H.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_LPS25H.py", line 10
    print "AKI_I2C_LPS25H"
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_MCP3425.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_MCP3425.py", line 11
    print "AKI_I2C_MCP3425"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_PCA9685.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_PCA9685.py", line 32
    print "AKI_I2C_PCA9685"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_SHT31.py'...
***   File "./lib/python3.5/site-packages/akilib/raspberrypi/AKI_I2C_SHT31.py", line 18
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/akilib-2.1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
